sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:3: error: not found: value getNombresValeurs
  for(j<- 0 to getNombresValeurs()-1)
               ^