sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for(j<- 0 to getNombresValeurs()-1)
  for (i <- 0 to getNombreValeurs()-2){
    if (plusPetit(i+1,i)){
      echange(i+1,i)
    }
  }
}